--- a/_posts/2023-11-04-지역별인구파악.md
+++ b/_posts/2023-11-04-지역별인구파악.md
@@ -1,14 +1,28 @@
+```python
+"""
 ----
 layout:single
-title:"두번째 첫포스팅"
+title:"지역별인구파악"
 ---
+"""
+```
+
+
+
+
+    '\n----\nlayout:single\ntitle:"지역별인구파악"\n---\n'
+
+
+
+## 원시 데이터를 읽어온다.
+
 
 ```python
 import pandas as pd
-
-
 df = pd.read_csv("행정안전부_지역별(행정동) 성별 연령별 주민등록 인구수_20231031.csv", encoding="cp949")
 ```
+
+## 데이터 확인
 
 
 ```python
@@ -331,6 +345,8 @@ df
 
 
 
+## 필요한 컬럼만 선별하여 별도의 데이터프레임 생성
+
 
 ```python
 filter = df[["시도명","시군구명","읍면동명","계","남자","여자"]]
@@ -473,6 +489,10 @@ filter
 
 
 
+## 선별된 데이터 내에서 화성시만 별도로 인구수 높은 순으로 정렬
+### 동탄은 별도의 이름으로 매핑
+### 그외의 지역은 화성으로 매핑
+
 
 ```python
 filter_df = filter[filter["시군구명"] == "화성시"].sort_values(by="계", ascending=False)
@@ -492,9 +512,1583 @@ mapping = {
 }
 
 filter_df['권역별타입'] = filter_df['읍면동명'].map(mapping)
+filter_df.loc[filter_df["권역별타입"].isna(), "권역별타입"] = "화성"
 
-filter_df.loc[filter_df["권역별타입"].isna(), "권역별타입"] = "구화성"
+filter_df["남자_비율"] = filter_df["남자"] / filter_df["계"] * 100
+filter_df["여자_비율"] = filter_df["여자"] / filter_df["계"] * 100
 
+filter_df["비율차이"] = filter_df["남자_비율"] - filter_df["여자_비율"]
+
+filter_df
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+      <th>남자</th>
+      <th>여자</th>
+      <th>권역별타입</th>
+      <th>남자_비율</th>
+      <th>여자_비율</th>
+      <th>비율차이</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1663</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>봉담읍</td>
+      <td>92823</td>
+      <td>46958</td>
+      <td>45865</td>
+      <td>화성</td>
+      <td>50.588755</td>
+      <td>49.411245</td>
+      <td>1.177510</td>
+    </tr>
+    <tr>
+      <th>1665</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>향남읍</td>
+      <td>85647</td>
+      <td>46002</td>
+      <td>39645</td>
+      <td>화성</td>
+      <td>53.711163</td>
+      <td>46.288837</td>
+      <td>7.422327</td>
+    </tr>
+    <tr>
+      <th>1689</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄7동</td>
+      <td>56758</td>
+      <td>28533</td>
+      <td>28225</td>
+      <td>동탄2신도시</td>
+      <td>50.271327</td>
+      <td>49.728673</td>
+      <td>0.542655</td>
+    </tr>
+    <tr>
+      <th>1666</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>남양읍</td>
+      <td>55133</td>
+      <td>29923</td>
+      <td>25210</td>
+      <td>화성</td>
+      <td>54.274210</td>
+      <td>45.725790</td>
+      <td>8.548419</td>
+    </tr>
+    <tr>
+      <th>1686</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄4동</td>
+      <td>53389</td>
+      <td>26533</td>
+      <td>26856</td>
+      <td>동탄2신도시</td>
+      <td>49.697503</td>
+      <td>50.302497</td>
+      <td>-0.604994</td>
+    </tr>
+    <tr>
+      <th>1677</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>진안동</td>
+      <td>50485</td>
+      <td>27402</td>
+      <td>23083</td>
+      <td>화성</td>
+      <td>54.277508</td>
+      <td>45.722492</td>
+      <td>8.555016</td>
+    </tr>
+    <tr>
+      <th>1683</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄1동</td>
+      <td>50476</td>
+      <td>26093</td>
+      <td>24383</td>
+      <td>동탄1신도시</td>
+      <td>51.693874</td>
+      <td>48.306126</td>
+      <td>3.387749</td>
+    </tr>
+    <tr>
+      <th>1687</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄5동</td>
+      <td>46746</td>
+      <td>23503</td>
+      <td>23243</td>
+      <td>동탄2신도시</td>
+      <td>50.278099</td>
+      <td>49.721901</td>
+      <td>0.556197</td>
+    </tr>
+    <tr>
+      <th>1688</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄6동</td>
+      <td>43247</td>
+      <td>22242</td>
+      <td>21005</td>
+      <td>동탄2신도시</td>
+      <td>51.430157</td>
+      <td>48.569843</td>
+      <td>2.860314</td>
+    </tr>
+    <tr>
+      <th>1685</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄3동</td>
+      <td>40912</td>
+      <td>21074</td>
+      <td>19838</td>
+      <td>동탄1신도시</td>
+      <td>51.510559</td>
+      <td>48.489441</td>
+      <td>3.021118</td>
+    </tr>
+    <tr>
+      <th>1691</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄9동</td>
+      <td>39155</td>
+      <td>19661</td>
+      <td>19494</td>
+      <td>동탄2신도시</td>
+      <td>50.213255</td>
+      <td>49.786745</td>
+      <td>0.426510</td>
+    </tr>
+    <tr>
+      <th>1680</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>반월동</td>
+      <td>37284</td>
+      <td>18882</td>
+      <td>18402</td>
+      <td>화성</td>
+      <td>50.643708</td>
+      <td>49.356292</td>
+      <td>1.287416</td>
+    </tr>
+    <tr>
+      <th>1678</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>병점1동</td>
+      <td>36539</td>
+      <td>18779</td>
+      <td>17760</td>
+      <td>화성</td>
+      <td>51.394401</td>
+      <td>48.605599</td>
+      <td>2.788801</td>
+    </tr>
+    <tr>
+      <th>1684</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄2동</td>
+      <td>34380</td>
+      <td>16874</td>
+      <td>17506</td>
+      <td>동탄1신도시</td>
+      <td>49.080861</td>
+      <td>50.919139</td>
+      <td>-1.838278</td>
+    </tr>
+    <tr>
+      <th>1690</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄8동</td>
+      <td>33572</td>
+      <td>16881</td>
+      <td>16691</td>
+      <td>동탄2신도시</td>
+      <td>50.282974</td>
+      <td>49.717026</td>
+      <td>0.565948</td>
+    </tr>
+    <tr>
+      <th>1682</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>화산동</td>
+      <td>27157</td>
+      <td>14365</td>
+      <td>12792</td>
+      <td>화성</td>
+      <td>52.896123</td>
+      <td>47.103877</td>
+      <td>5.792245</td>
+    </tr>
+    <tr>
+      <th>1676</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>새솔동</td>
+      <td>25563</td>
+      <td>12813</td>
+      <td>12750</td>
+      <td>화성</td>
+      <td>50.123225</td>
+      <td>49.876775</td>
+      <td>0.246450</td>
+    </tr>
+    <tr>
+      <th>1679</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>병점2동</td>
+      <td>23006</td>
+      <td>11203</td>
+      <td>11803</td>
+      <td>화성</td>
+      <td>48.695992</td>
+      <td>51.304008</td>
+      <td>-2.608015</td>
+    </tr>
+    <tr>
+      <th>1664</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>우정읍</td>
+      <td>17439</td>
+      <td>9598</td>
+      <td>7841</td>
+      <td>화성</td>
+      <td>55.037559</td>
+      <td>44.962441</td>
+      <td>10.075119</td>
+    </tr>
+    <tr>
+      <th>1681</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>기배동</td>
+      <td>16109</td>
+      <td>8168</td>
+      <td>7941</td>
+      <td>화성</td>
+      <td>50.704575</td>
+      <td>49.295425</td>
+      <td>1.409150</td>
+    </tr>
+    <tr>
+      <th>1675</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>정남면</td>
+      <td>11045</td>
+      <td>6462</td>
+      <td>4583</td>
+      <td>화성</td>
+      <td>58.506111</td>
+      <td>41.493889</td>
+      <td>17.012223</td>
+    </tr>
+    <tr>
+      <th>1670</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>송산면</td>
+      <td>10830</td>
+      <td>5948</td>
+      <td>4882</td>
+      <td>화성</td>
+      <td>54.921514</td>
+      <td>45.078486</td>
+      <td>9.843029</td>
+    </tr>
+    <tr>
+      <th>1673</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>장안면</td>
+      <td>10008</td>
+      <td>5815</td>
+      <td>4193</td>
+      <td>화성</td>
+      <td>58.103517</td>
+      <td>41.896483</td>
+      <td>16.207034</td>
+    </tr>
+    <tr>
+      <th>1672</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>팔탄면</td>
+      <td>9894</td>
+      <td>6015</td>
+      <td>3879</td>
+      <td>화성</td>
+      <td>60.794421</td>
+      <td>39.205579</td>
+      <td>21.588842</td>
+    </tr>
+    <tr>
+      <th>1671</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>서신면</td>
+      <td>7114</td>
+      <td>3955</td>
+      <td>3159</td>
+      <td>화성</td>
+      <td>55.594602</td>
+      <td>44.405398</td>
+      <td>11.189204</td>
+    </tr>
+    <tr>
+      <th>1668</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>비봉면</td>
+      <td>7009</td>
+      <td>4003</td>
+      <td>3006</td>
+      <td>화성</td>
+      <td>57.112284</td>
+      <td>42.887716</td>
+      <td>14.224568</td>
+    </tr>
+    <tr>
+      <th>1669</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>마도면</td>
+      <td>6854</td>
+      <td>4139</td>
+      <td>2715</td>
+      <td>화성</td>
+      <td>60.388095</td>
+      <td>39.611905</td>
+      <td>20.776189</td>
+    </tr>
+    <tr>
+      <th>1667</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>매송면</td>
+      <td>6742</td>
+      <td>3599</td>
+      <td>3143</td>
+      <td>화성</td>
+      <td>53.381786</td>
+      <td>46.618214</td>
+      <td>6.763572</td>
+    </tr>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>3986</td>
+      <td>2475</td>
+      <td>1511</td>
+      <td>화성</td>
+      <td>62.092323</td>
+      <td>37.907677</td>
+      <td>24.184646</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 인구수로 그래프
+
+
+```python
+import matplotlib.pyplot as plt
+import matplotlib.font_manager as fm
+
+# 나눔글꼴 경로 설정
+font_path = 'C:/Windows/Fonts/Hancom Gothic Bold.ttf'
+
+# 폰트 이름 가져오기
+font_name = fm.FontProperties(fname=font_path).get_name()
+
+# 폰트 설정
+plt.rc('font', family=font_name)
+
+
+# 막대 그래프 그리기
+plt.figure(figsize=(10, 6))  # 그래프의 크기 설정 (선택 사항)
+plt.bar(filter_df["읍면동명"], filter_df["계"])
+plt.xlabel("읍면동명")  # x축 레이블 설정
+plt.ylabel("계")  # y축 레이블 설정
+plt.title("화성시 읍면동별 주민등록 인구수")  # 그래프 제목 설정 (선택 사항)
+plt.xticks(rotation=90)  # x축 레이블 텍스트를 90도 회전하여 가독성 향상 (선택 사항)
+plt.show()  # 그래프 표시
+```
+
+
+    
+![png](output_10_0.png)
+    
+
+
+## 권역별 인구수 체크
+
+## 화성시에서 인구가 가장 많은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["계"] == filter_df["계"].max()][["시도명","시군구명", "읍면동명", "계"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1663</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>봉담읍</td>
+      <td>92823</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 화성시에서 인구가 가장 적은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["계"] == filter_df["계"].min()][["시도명","시군구명", "읍면동명", "계"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>3986</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 화성시에서 남자가 가장 많은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["남자"] == filter_df["남자"].max()][["시도명","시군구명", "읍면동명", "남자"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>남자</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1663</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>봉담읍</td>
+      <td>46958</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 화성시에서 남자가 가장 적은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["남자"] == filter_df["남자"].min()][["시도명","시군구명", "읍면동명", "남자"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>남자</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>2475</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 화성시에서 여자가 가장 많은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["여자"] == filter_df["여자"].max()][["시도명","시군구명", "읍면동명", "여자"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>여자</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1663</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>봉담읍</td>
+      <td>45865</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 화성시에서 여자가 가장 적은 지역
+
+
+```python
+#filter_df[filter_df["계"] == filter_df["계"].min()]
+filter_df[filter_df["여자"] == filter_df["여자"].min()][["시도명","시군구명", "읍면동명", "여자"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>여자</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>1511</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+filter_df
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+      <th>남자</th>
+      <th>여자</th>
+      <th>권역별타입</th>
+      <th>남자_비율</th>
+      <th>여자_비율</th>
+      <th>비율차이</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1663</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>봉담읍</td>
+      <td>92823</td>
+      <td>46958</td>
+      <td>45865</td>
+      <td>화성</td>
+      <td>50.588755</td>
+      <td>49.411245</td>
+      <td>1.177510</td>
+    </tr>
+    <tr>
+      <th>1665</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>향남읍</td>
+      <td>85647</td>
+      <td>46002</td>
+      <td>39645</td>
+      <td>화성</td>
+      <td>53.711163</td>
+      <td>46.288837</td>
+      <td>7.422327</td>
+    </tr>
+    <tr>
+      <th>1689</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄7동</td>
+      <td>56758</td>
+      <td>28533</td>
+      <td>28225</td>
+      <td>동탄2신도시</td>
+      <td>50.271327</td>
+      <td>49.728673</td>
+      <td>0.542655</td>
+    </tr>
+    <tr>
+      <th>1666</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>남양읍</td>
+      <td>55133</td>
+      <td>29923</td>
+      <td>25210</td>
+      <td>화성</td>
+      <td>54.274210</td>
+      <td>45.725790</td>
+      <td>8.548419</td>
+    </tr>
+    <tr>
+      <th>1686</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄4동</td>
+      <td>53389</td>
+      <td>26533</td>
+      <td>26856</td>
+      <td>동탄2신도시</td>
+      <td>49.697503</td>
+      <td>50.302497</td>
+      <td>-0.604994</td>
+    </tr>
+    <tr>
+      <th>1677</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>진안동</td>
+      <td>50485</td>
+      <td>27402</td>
+      <td>23083</td>
+      <td>화성</td>
+      <td>54.277508</td>
+      <td>45.722492</td>
+      <td>8.555016</td>
+    </tr>
+    <tr>
+      <th>1683</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄1동</td>
+      <td>50476</td>
+      <td>26093</td>
+      <td>24383</td>
+      <td>동탄1신도시</td>
+      <td>51.693874</td>
+      <td>48.306126</td>
+      <td>3.387749</td>
+    </tr>
+    <tr>
+      <th>1687</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄5동</td>
+      <td>46746</td>
+      <td>23503</td>
+      <td>23243</td>
+      <td>동탄2신도시</td>
+      <td>50.278099</td>
+      <td>49.721901</td>
+      <td>0.556197</td>
+    </tr>
+    <tr>
+      <th>1688</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄6동</td>
+      <td>43247</td>
+      <td>22242</td>
+      <td>21005</td>
+      <td>동탄2신도시</td>
+      <td>51.430157</td>
+      <td>48.569843</td>
+      <td>2.860314</td>
+    </tr>
+    <tr>
+      <th>1685</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄3동</td>
+      <td>40912</td>
+      <td>21074</td>
+      <td>19838</td>
+      <td>동탄1신도시</td>
+      <td>51.510559</td>
+      <td>48.489441</td>
+      <td>3.021118</td>
+    </tr>
+    <tr>
+      <th>1691</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄9동</td>
+      <td>39155</td>
+      <td>19661</td>
+      <td>19494</td>
+      <td>동탄2신도시</td>
+      <td>50.213255</td>
+      <td>49.786745</td>
+      <td>0.426510</td>
+    </tr>
+    <tr>
+      <th>1680</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>반월동</td>
+      <td>37284</td>
+      <td>18882</td>
+      <td>18402</td>
+      <td>화성</td>
+      <td>50.643708</td>
+      <td>49.356292</td>
+      <td>1.287416</td>
+    </tr>
+    <tr>
+      <th>1678</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>병점1동</td>
+      <td>36539</td>
+      <td>18779</td>
+      <td>17760</td>
+      <td>화성</td>
+      <td>51.394401</td>
+      <td>48.605599</td>
+      <td>2.788801</td>
+    </tr>
+    <tr>
+      <th>1684</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄2동</td>
+      <td>34380</td>
+      <td>16874</td>
+      <td>17506</td>
+      <td>동탄1신도시</td>
+      <td>49.080861</td>
+      <td>50.919139</td>
+      <td>-1.838278</td>
+    </tr>
+    <tr>
+      <th>1690</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄8동</td>
+      <td>33572</td>
+      <td>16881</td>
+      <td>16691</td>
+      <td>동탄2신도시</td>
+      <td>50.282974</td>
+      <td>49.717026</td>
+      <td>0.565948</td>
+    </tr>
+    <tr>
+      <th>1682</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>화산동</td>
+      <td>27157</td>
+      <td>14365</td>
+      <td>12792</td>
+      <td>화성</td>
+      <td>52.896123</td>
+      <td>47.103877</td>
+      <td>5.792245</td>
+    </tr>
+    <tr>
+      <th>1676</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>새솔동</td>
+      <td>25563</td>
+      <td>12813</td>
+      <td>12750</td>
+      <td>화성</td>
+      <td>50.123225</td>
+      <td>49.876775</td>
+      <td>0.246450</td>
+    </tr>
+    <tr>
+      <th>1679</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>병점2동</td>
+      <td>23006</td>
+      <td>11203</td>
+      <td>11803</td>
+      <td>화성</td>
+      <td>48.695992</td>
+      <td>51.304008</td>
+      <td>-2.608015</td>
+    </tr>
+    <tr>
+      <th>1664</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>우정읍</td>
+      <td>17439</td>
+      <td>9598</td>
+      <td>7841</td>
+      <td>화성</td>
+      <td>55.037559</td>
+      <td>44.962441</td>
+      <td>10.075119</td>
+    </tr>
+    <tr>
+      <th>1681</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>기배동</td>
+      <td>16109</td>
+      <td>8168</td>
+      <td>7941</td>
+      <td>화성</td>
+      <td>50.704575</td>
+      <td>49.295425</td>
+      <td>1.409150</td>
+    </tr>
+    <tr>
+      <th>1675</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>정남면</td>
+      <td>11045</td>
+      <td>6462</td>
+      <td>4583</td>
+      <td>화성</td>
+      <td>58.506111</td>
+      <td>41.493889</td>
+      <td>17.012223</td>
+    </tr>
+    <tr>
+      <th>1670</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>송산면</td>
+      <td>10830</td>
+      <td>5948</td>
+      <td>4882</td>
+      <td>화성</td>
+      <td>54.921514</td>
+      <td>45.078486</td>
+      <td>9.843029</td>
+    </tr>
+    <tr>
+      <th>1673</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>장안면</td>
+      <td>10008</td>
+      <td>5815</td>
+      <td>4193</td>
+      <td>화성</td>
+      <td>58.103517</td>
+      <td>41.896483</td>
+      <td>16.207034</td>
+    </tr>
+    <tr>
+      <th>1672</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>팔탄면</td>
+      <td>9894</td>
+      <td>6015</td>
+      <td>3879</td>
+      <td>화성</td>
+      <td>60.794421</td>
+      <td>39.205579</td>
+      <td>21.588842</td>
+    </tr>
+    <tr>
+      <th>1671</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>서신면</td>
+      <td>7114</td>
+      <td>3955</td>
+      <td>3159</td>
+      <td>화성</td>
+      <td>55.594602</td>
+      <td>44.405398</td>
+      <td>11.189204</td>
+    </tr>
+    <tr>
+      <th>1668</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>비봉면</td>
+      <td>7009</td>
+      <td>4003</td>
+      <td>3006</td>
+      <td>화성</td>
+      <td>57.112284</td>
+      <td>42.887716</td>
+      <td>14.224568</td>
+    </tr>
+    <tr>
+      <th>1669</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>마도면</td>
+      <td>6854</td>
+      <td>4139</td>
+      <td>2715</td>
+      <td>화성</td>
+      <td>60.388095</td>
+      <td>39.611905</td>
+      <td>20.776189</td>
+    </tr>
+    <tr>
+      <th>1667</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>매송면</td>
+      <td>6742</td>
+      <td>3599</td>
+      <td>3143</td>
+      <td>화성</td>
+      <td>53.381786</td>
+      <td>46.618214</td>
+      <td>6.763572</td>
+    </tr>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>3986</td>
+      <td>2475</td>
+      <td>1511</td>
+      <td>화성</td>
+      <td>62.092323</td>
+      <td>37.907677</td>
+      <td>24.184646</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+filter_df["비율차이"].min()
+filter_df[filter_df["비율차이"] == filter_df["비율차이"].max()][["시도명","시군구명", "읍면동명", "남자"]]
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>남자</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>2475</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 남녀 비율 중 남자가 많은 지역 most 5
+
+
+```python
+filter_df.sort_values(by="비율차이", ascending=False).head()
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+      <th>남자</th>
+      <th>여자</th>
+      <th>권역별타입</th>
+      <th>남자_비율</th>
+      <th>여자_비율</th>
+      <th>비율차이</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1674</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>양감면</td>
+      <td>3986</td>
+      <td>2475</td>
+      <td>1511</td>
+      <td>화성</td>
+      <td>62.092323</td>
+      <td>37.907677</td>
+      <td>24.184646</td>
+    </tr>
+    <tr>
+      <th>1672</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>팔탄면</td>
+      <td>9894</td>
+      <td>6015</td>
+      <td>3879</td>
+      <td>화성</td>
+      <td>60.794421</td>
+      <td>39.205579</td>
+      <td>21.588842</td>
+    </tr>
+    <tr>
+      <th>1669</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>마도면</td>
+      <td>6854</td>
+      <td>4139</td>
+      <td>2715</td>
+      <td>화성</td>
+      <td>60.388095</td>
+      <td>39.611905</td>
+      <td>20.776189</td>
+    </tr>
+    <tr>
+      <th>1675</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>정남면</td>
+      <td>11045</td>
+      <td>6462</td>
+      <td>4583</td>
+      <td>화성</td>
+      <td>58.506111</td>
+      <td>41.493889</td>
+      <td>17.012223</td>
+    </tr>
+    <tr>
+      <th>1673</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>장안면</td>
+      <td>10008</td>
+      <td>5815</td>
+      <td>4193</td>
+      <td>화성</td>
+      <td>58.103517</td>
+      <td>41.896483</td>
+      <td>16.207034</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+## 남녀 비율 중 여자가 많은 지역 most 5
+
+
+```python
+filter_df.sort_values(by="비율차이", ascending=True).head()
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>시도명</th>
+      <th>시군구명</th>
+      <th>읍면동명</th>
+      <th>계</th>
+      <th>남자</th>
+      <th>여자</th>
+      <th>권역별타입</th>
+      <th>남자_비율</th>
+      <th>여자_비율</th>
+      <th>비율차이</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1679</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>병점2동</td>
+      <td>23006</td>
+      <td>11203</td>
+      <td>11803</td>
+      <td>화성</td>
+      <td>48.695992</td>
+      <td>51.304008</td>
+      <td>-2.608015</td>
+    </tr>
+    <tr>
+      <th>1684</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄2동</td>
+      <td>34380</td>
+      <td>16874</td>
+      <td>17506</td>
+      <td>동탄1신도시</td>
+      <td>49.080861</td>
+      <td>50.919139</td>
+      <td>-1.838278</td>
+    </tr>
+    <tr>
+      <th>1686</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄4동</td>
+      <td>53389</td>
+      <td>26533</td>
+      <td>26856</td>
+      <td>동탄2신도시</td>
+      <td>49.697503</td>
+      <td>50.302497</td>
+      <td>-0.604994</td>
+    </tr>
+    <tr>
+      <th>1676</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>새솔동</td>
+      <td>25563</td>
+      <td>12813</td>
+      <td>12750</td>
+      <td>화성</td>
+      <td>50.123225</td>
+      <td>49.876775</td>
+      <td>0.246450</td>
+    </tr>
+    <tr>
+      <th>1691</th>
+      <td>경기도</td>
+      <td>화성시</td>
+      <td>동탄9동</td>
+      <td>39155</td>
+      <td>19661</td>
+      <td>19494</td>
+      <td>동탄2신도시</td>
+      <td>50.213255</td>
+      <td>49.786745</td>
+      <td>0.426510</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+#https://velog.io/@sooyeon/folium-Circle-Point-map-GeoJson-%ED%96%89%EC%A0%95%EA%B5%AC%EC%97%AD-%EA%B2%BD%EA%B3%84-%EA%B7%B8%EB%A6%AC%EA%B8%B0
+
+
+import geopandas as gpd
+EMD = gpd.read_file('data_file/emd_20230729/emd.shp', encoding='cp949')
+EMD.head()
+
+"""
+# 용인시의 행정구역 코드는 4146
+yi = EMD[EMD['EMD_CD'].str.startswith('4146')]
+yi.head()
+
+# WGS 84의 좌표계로 변환하여 위도경도 데이터를 생성
+yi4326 = yi.to_crs(epsg=4326)
+yi4326 = yi4326.sort_values('EMD_NM')
+display(yi4326.head(),yi4326.shape)
+"""
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>EMD_CD</th>
+      <th>EMD_ENG_NM</th>
+      <th>EMD_KOR_NM</th>
+      <th>geometry</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>11110101</td>
+      <td>Cheongun-dong</td>
+      <td>청운동</td>
+      <td>POLYGON ((953700.022 1954605.065, 953693.871 1...</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>11110102</td>
+      <td>Singyo-dong</td>
+      <td>신교동</td>
+      <td>POLYGON ((953233.465 1953996.984, 953235.183 1...</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>11110103</td>
+      <td>Gungjeong-dong</td>
+      <td>궁정동</td>
+      <td>POLYGON ((953560.228 1954257.466, 953561.190 1...</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>11110104</td>
+      <td>Hyoja-dong</td>
+      <td>효자동</td>
+      <td>POLYGON ((953519.843 1953890.785, 953518.489 1...</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>11110105</td>
+      <td>Changseong-dong</td>
+      <td>창성동</td>
+      <td>POLYGON ((953516.123 1953734.362, 953516.526 1...</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
+
+
+```python
+
+```
+
+
+```python
+#filtered_df1 = filter_df[filter_df["읍면동명"].str.startswith("동탄")]
+#filtered_df1
+def check_population(df, area):
+    # "권역별타입"이 "동탄2신도시"인 행들을 필터링
+    filtered = df[df["권역별타입"] == area]    
+    #filtered = df[df["권역별타입"].isin(["동탄2신도시","동탄1신도시"])]
+    
+    # 필터링된 데이터를 그룹화하고 "계" 열의 합계를 계산
+    total_population = filtered["계"].sum()
+    # 결과 출력
+    print(area + "의 총 인구 수:", total_population)
+  
+
+
+    
+check_population(filter_df, "동탄2신도시")
+check_population(filter_df, "동탄1신도시")
+check_population(filter_df, "화성")
+print("화성시 전체 인구수 ", filter_df["계"].sum())
+
+#filter_df
+```
+
+    동탄2신도시의 총 인구 수: 272867
+    동탄1신도시의 총 인구 수: 125768
+    화성의 총 인구 수: 540667
+    화성시 전체 인구수  939302
+    
+
+
+```python
 filter_df
 ```
 
@@ -537,7 +2131,7 @@ filter_df
       <td>92823</td>
       <td>46958</td>
       <td>45865</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1665</th>
@@ -547,7 +2141,7 @@ filter_df
       <td>85647</td>
       <td>46002</td>
       <td>39645</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1689</th>
@@ -567,7 +2161,7 @@ filter_df
       <td>55133</td>
       <td>29923</td>
       <td>25210</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1686</th>
@@ -587,7 +2181,7 @@ filter_df
       <td>50485</td>
       <td>27402</td>
       <td>23083</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1683</th>
@@ -647,7 +2241,7 @@ filter_df
       <td>37284</td>
       <td>18882</td>
       <td>18402</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1678</th>
@@ -657,7 +2251,7 @@ filter_df
       <td>36539</td>
       <td>18779</td>
       <td>17760</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1684</th>
@@ -687,7 +2281,7 @@ filter_df
       <td>27157</td>
       <td>14365</td>
       <td>12792</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1676</th>
@@ -697,7 +2291,7 @@ filter_df
       <td>25563</td>
       <td>12813</td>
       <td>12750</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1679</th>
@@ -707,7 +2301,7 @@ filter_df
       <td>23006</td>
       <td>11203</td>
       <td>11803</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1664</th>
@@ -717,7 +2311,7 @@ filter_df
       <td>17439</td>
       <td>9598</td>
       <td>7841</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1681</th>
@@ -727,7 +2321,7 @@ filter_df
       <td>16109</td>
       <td>8168</td>
       <td>7941</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1675</th>
@@ -737,7 +2331,7 @@ filter_df
       <td>11045</td>
       <td>6462</td>
       <td>4583</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1670</th>
@@ -747,7 +2341,7 @@ filter_df
       <td>10830</td>
       <td>5948</td>
       <td>4882</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1673</th>
@@ -757,7 +2351,7 @@ filter_df
       <td>10008</td>
       <td>5815</td>
       <td>4193</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1672</th>
@@ -767,7 +2361,7 @@ filter_df
       <td>9894</td>
       <td>6015</td>
       <td>3879</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1671</th>
@@ -777,7 +2371,7 @@ filter_df
       <td>7114</td>
       <td>3955</td>
       <td>3159</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1668</th>
@@ -787,7 +2381,7 @@ filter_df
       <td>7009</td>
       <td>4003</td>
       <td>3006</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1669</th>
@@ -797,7 +2391,7 @@ filter_df
       <td>6854</td>
       <td>4139</td>
       <td>2715</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1667</th>
@@ -807,7 +2401,7 @@ filter_df
       <td>6742</td>
       <td>3599</td>
       <td>3143</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
     <tr>
       <th>1674</th>
@@ -817,7 +2411,7 @@ filter_df
       <td>3986</td>
       <td>2475</td>
       <td>1511</td>
-      <td>구화성</td>
+      <td>화성</td>
     </tr>
   </tbody>
 </table>
@@ -827,56 +2421,18 @@ filter_df
 
 
 ```python
-import matplotlib.pyplot as plt
-import matplotlib.font_manager as fm
 
-# 나눔글꼴 경로 설정
-font_path = 'C:/Windows/Fonts/Hancom Gothic Bold.ttf'
-
-# 폰트 이름 가져오기
-font_name = fm.FontProperties(fname=font_path).get_name()
-
-# 폰트 설정
-plt.rc('font', family=font_name)
-
-
-# 막대 그래프 그리기
-plt.figure(figsize=(10, 6))  # 그래프의 크기 설정 (선택 사항)
-plt.bar(filter_df["읍면동명"], filter_df["계"])
-plt.xlabel("읍면동명")  # x축 레이블 설정
-plt.ylabel("계")  # y축 레이블 설정
-plt.title("화성시 읍면동별 주민등록 인구수")  # 그래프 제목 설정 (선택 사항)
-plt.xticks(rotation=90)  # x축 레이블 텍스트를 90도 회전하여 가독성 향상 (선택 사항)
-plt.show()  # 그래프 표시
 ```
-![png](output_4_0.png)
+
 
 ```python
-#filtered_df1 = filter_df[filter_df["읍면동명"].str.startswith("동탄")]
-#filtered_df1
 
-
-
-
-def check_population(df, area):
-    # "권역별타입"이 "동탄2신도시"인 행들을 필터링
-    filtered = df[df["권역별타입"] == area]    
-    #filtered = df[df["권역별타입"].isin(["동탄2신도시","동탄1신도시"])]
-    
-    # 필터링된 데이터를 그룹화하고 "계" 열의 합계를 계산
-    total_population = filtered["계"].sum()
-    # 결과 출력
-    print(area + "의 총 인구 수:", total_population)
-  
-
-
-    
-check_population(filter_df, "동탄2신도시")
-#filter_df
 ```
 
-    동탄2신도시의 총 인구 수: 272867
-    
+
+```python
+
+```
 
 
 ```python
